Add prototype menu control

--- a/public/prototype/prototype.html
+++ b/public/prototype/prototype.html
@@ -6,6 +6,44 @@
     <link rel="stylesheet" href="prototype.css">
   </head>
   <body>
-    <script type="text/javascript" src="dist/main.bundle.js"></script>
+    <div id="root">
+      <input type="checkbox" class="menuopen">
+      <div class="menu">
+        <nav>
+          <ul class="list">
+            <li><a href="">ParticipantInfoStrings</a></li>
+            <li><a href="">ParticipantInfoStringsAdditional</a></li>
+            <li><a href="">GameStateData</a></li>
+            <li><a href="">ParticipantInfoData</a></li>
+            <li><a href="">ParticipantInfo</a></li>
+            <li><a href="">UnfilteredInputData</a></li>
+            <li><a href="">EventInfoData</a></li>
+            <li><a href="">TimingInfoData</a></li>
+            <li><a href="">SectorTimeData</a></li>
+            <li><a href="">FlagData</a></li>
+            <li><a href="">PitInfoData</a></li>
+            <li><a href="">CarStateData</a></li>
+            <li><a href="">CarStateVecotrData</a></li>
+            <li><a href="">TyreData</a></li>
+            <li><a href="">TyreUdpData</a></li>
+            <li><a href="">OtherUdpData</a></li>
+            <li><a href="">CarDamageData,</a></li>
+            <li><a href="">WeatherData</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div>
+        <main>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+          <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        </main>
+      </div>
+    </div>
   </body>
 </html>
