--- a/public/debug.html
+++ b/public/debug.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>PCars2 UDP APP</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="debug.css">
   </head>
   <body>
     <div id="root"></div>
