Modify SVG prototype

--- a/public/prototype/svg.html
+++ b/public/prototype/svg.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <title>SVG</title>
+    <link rel="stylesheet" href="svg.css">
   </head>
   <body>
+    <main>
+      <div>
+        <svg viewBox="0 0 400 400">
+          <g id="clutch">
+          </g>
+          <g id="clutchValue">
+          </g>
+          <g id="engineMeter">
+          </g>
+        </svg>
+      </div>
+      <div>
+        <svg viewBox="0 0 400 400">
+          <path fill="#555" stroke="black" d="M20 10 L 30 40" />
+        </svg>
+      </div>
+    </main>
     <script src="svg.js"></script>
   </body>
 </html>
