--- a/public/prototype/svg.html
+++ b/public/prototype/svg.html
@@ -22,6 +22,12 @@
           <path fill="#555" stroke="black" d="M20 10 L 30 40" />
         </svg>
       </div>
+      <div>
+        <img src="oil.svg" width="32" height="32">
+        <img src="gasoline.svg" width="32" height="32">
+        <img src="disc-brake.svg" width="32" height="32">
+        <img src="disc-brake2.svg" width="32" height="32">
+      </div>
     </main>
     <script src="svg.js"></script>
   </body>
