Add temperature icons

--- a/public/prototype/svg.html
+++ b/public/prototype/svg.html
@@ -27,6 +27,8 @@
         <img src="gasoline.svg" width="32" height="32">
         <img src="disc-brake.svg" width="32" height="32">
         <img src="disc-brake2.svg" width="32" height="32">
+        <img src="celsius.svg" width="32" height="32">
+        <img src="fahrenheit.svg" width="32" height="32">
       </div>
     </main>
     <script src="svg.js"></script>
