Add slide menu animation

--- a/public/prototype/menu.html
+++ b/public/prototype/menu.html
@@ -6,7 +6,37 @@
     <link rel="stylesheet" href="menu.css">
   </head>
   <body>
+    <input id="open" type="checkbox">
+    <div id="menu">
+      <nav>
+        <ul class="list">
+          <li><button>ParticipantInfoStrings</button></li>
+          <li><button>ParticipantInfoStringsAdditional</button></li>
+          <li><button>GameStateData</button></li>
+          <li><button>ParticipantInfoData</button></li>
+          <li><button>ParticipantInfo</button></li>
+          <li><button>UnfilteredInputData</button></li>
+          <li><button>EventInfoData</button></li>
+          <li><button>TimingInfoData</button></li>
+          <li><button>SectorTimeData</button></li>
+          <li><button>FlagData</button></li>
+          <li><button>PitInfoData</button></li>
+          <li><button>CarStateData</button></li>
+          <li><button>CarStateVecotrData</button></li>
+          <li><button>TyreData</button></li>
+          <li><button>TyreUdpData</button></li>
+          <li><button>OtherUdpData</button></li>
+          <li><button>CarDamageData</button></li>
+          <li><input id="input" value="WeatherData" type="radio" value="WeatherData">WeatherData</li>
+        </ul>
+      </nav>
+    </div>
+    <div id="filter" class="filter" tabindex="0"></div>
     <main>
+      <div id=contents>
+        <p>Hello</p>
+        <button>CarDamageData</button>
+      </div>
     </main>
     <script src="menu.js"></script>
   </body>
