--- a/public/prototype/menu.html
+++ b/public/prototype/menu.html
@@ -6,36 +6,103 @@
     <link rel="stylesheet" href="menu.css">
   </head>
   <body>
-    <input id="open" type="checkbox">
-    <div id="menu">
+    <input id="open" type="checkbox" tabindex="1">
+    <div id="menu" tabindex="2">
       <nav>
-        <ul class="list">
-          <li><button>ParticipantInfoStrings</button></li>
-          <li><button>ParticipantInfoStringsAdditional</button></li>
-          <li><button>GameStateData</button></li>
-          <li><button>ParticipantInfoData</button></li>
-          <li><button>ParticipantInfo</button></li>
-          <li><button>UnfilteredInputData</button></li>
-          <li><button>EventInfoData</button></li>
-          <li><button>TimingInfoData</button></li>
-          <li><button>SectorTimeData</button></li>
-          <li><button>FlagData</button></li>
-          <li><button>PitInfoData</button></li>
-          <li><button>CarStateData</button></li>
-          <li><button>CarStateVecotrData</button></li>
-          <li><button>TyreData</button></li>
-          <li><button>TyreUdpData</button></li>
-          <li><button>OtherUdpData</button></li>
-          <li><button>CarDamageData</button></li>
-          <li><input id="input" value="WeatherData" type="radio" value="WeatherData">WeatherData</li>
-        </ul>
+        <div class="menuList">
+          <p>Product Menu</p>
+          <ul id="productMenu">
+            <li>
+              <input id="menuItem1" name="menuItem" type="radio" />
+              <label for="menuItem1">Simple</label>
+            </li>
+            <li>
+              <input id="menuItem2" name="menuItem" type="radio" />
+              <label for="menuItem2">Detail</label>
+            </li>
+          </ul>
+        </div>
+        <div class="menuList">
+          <p>Debug Menu</p>
+          <ul id="debugMenu">
+            <li>
+              <input id="menuItem3" name="menuItem" type="radio" />
+              <label for="menuItem3">ParticipantInfoStrings</label>
+            </li>
+            <li>
+              <input id="menuItem4" name="menuItem" type="radio"/>
+              <label for="menuItem4">ParticipantInfoStringsAdditional</label>
+            </li>
+            <li>
+              <input id="menuItem5" name="menuItem" type="radio"/>
+              <label for="menuItem5">GameStateData</label>
+            </li>
+            <li>
+              <input id="menuItem6" name="menuItem" type="radio"/>
+              <label for="menuItem6">ParticipantInfoData</label>
+            </li>
+            <li>
+              <input id="menuItem7" name="menuItem" type="radio"/>
+              <label for="menuItem7">ParticipantInfo</label>
+            </li>
+            <li>
+              <input id="menuItem8" name="menuItem" type="radio"/>
+              <label for="menuItem8">UnfilteredInputData</label>
+            </li>
+            <li>
+              <input id="menuItem9" name="menuItem" type="radio">
+              <label for="menuItem9">EventInfoData</label>
+            </li>
+            <li>
+              <input id="menuItem9" name="menuItem" type="radio">
+              <label for="menuItem9">TimingInfoData</label>
+            </li>
+            <li>
+              <input id="menuItem10" name="menuItem" type="radio">
+              <label for="menuItem10">SectorTimeData</label>
+            </li>
+            <li>
+              <input id="menuItem11" name="menuItem" type="radio">
+              <label for="menuItem11">FlagData</label>
+            </li>
+            <li>
+              <input id="menuItem12" name="menuItem" type="radio">
+              <label for="menuItem12">PitInfoData</label>
+            </li>
+            <li>
+              <input id="menuItem13" name="menuItem" type="radio">
+              <label for="menuItem13">CarStateData</label>
+            </li>
+            <li>
+              <input id="menuItem14" name="menuItem" type="radio">
+              <label for="menuItem14">CarStateVecotrData</label>
+            </li>
+            <li>
+              <input id="menuItem15" name="menuItem" type="radio">
+              <label for="menuItem15">TyreData</label>
+            </li>
+            <li>
+              <input id="menuItem16" name="menuItem" type="radio">
+              <label for="menuItem16">TyreUdpData</label>
+            </li>
+            <li>
+              <input id="menuItem17" name="menuItem" type="radio">
+              <label for="menuItem17">OtherUdpData</label>
+            </li>
+            <li>
+              <input id="menuItem18" name="menuItem" type="radio">
+              <label for="menuItem18">CarDamageData</label>
+            </li>
+          </ul>
+        </div>
       </nav>
     </div>
-    <div id="filter" class="filter" tabindex="0"></div>
+    <div id="filter" class="filter" tabindex="3"></div>
     <main>
-      <div id=contents>
+      <div id=contents tabindex="4">
         <p>Hello</p>
         <button>CarDamageData</button>
+        <p>ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
       </div>
     </main>
     <script src="menu.js"></script>
