--- a/public/prototype/menu.html
+++ b/public/prototype/menu.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="menu.css">
   </head>
   <body>
-    <input id="open" type="checkbox" tabindex="1">
+    <input id="open" class="menuopen" type="checkbox" tabindex="1">
     <div id="menu" tabindex="2">
       <nav>
         <div class="menuList">
