--- a/public/prototype/menu.html
+++ b/public/prototype/menu.html
@@ -11,90 +11,30 @@
       <div id="innerMenu">
         <nav>
           <div class="menuList">
-            <p>Product Menu</p>
-            <ul id="productMenu">
-              <li>
-                <input id="menuItem1" name="menuItem" type="radio" />
-                <label for="menuItem1">Simple</label>
-              </li>
-              <li>
-                <input id="menuItem2" name="menuItem" type="radio" />
-                <label for="menuItem2">Detail</label>
-              </li>
-            </ul>
-          </div>
-          <div class="menuList">
-            <p>Debug Menu</p>
-            <ul id="debugMenu">
-              <li>
-                <input id="menuItem3" name="menuItem" type="radio" />
-                <label for="menuItem3">ParticipantInfoStrings</label>
-              </li>
-              <li>
-                <input id="menuItem4" name="menuItem" type="radio"/>
-                <label for="menuItem4">ParticipantInfoStringsAdditional</label>
-              </li>
-              <li>
-                <input id="menuItem5" name="menuItem" type="radio"/>
-                <label for="menuItem5">GameStateData</label>
-              </li>
-              <li>
-                <input id="menuItem6" name="menuItem" type="radio"/>
-                <label for="menuItem6">ParticipantInfoData</label>
-              </li>
-              <li>
-                <input id="menuItem7" name="menuItem" type="radio"/>
-                <label for="menuItem7">ParticipantInfo</label>
-              </li>
-              <li>
-                <input id="menuItem8" name="menuItem" type="radio"/>
-                <label for="menuItem8">UnfilteredInputData</label>
-              </li>
-              <li>
-                <input id="menuItem9" name="menuItem" type="radio">
-                <label for="menuItem9">EventInfoData</label>
-              </li>
-              <li>
-                <input id="menuItem9" name="menuItem" type="radio">
-                <label for="menuItem9">TimingInfoData</label>
-              </li>
-              <li>
-                <input id="menuItem10" name="menuItem" type="radio">
-                <label for="menuItem10">SectorTimeData</label>
-              </li>
-              <li>
-                <input id="menuItem11" name="menuItem" type="radio">
-                <label for="menuItem11">FlagData</label>
-              </li>
-              <li>
-                <input id="menuItem12" name="menuItem" type="radio">
-                <label for="menuItem12">PitInfoData</label>
-              </li>
-              <li>
-                <input id="menuItem13" name="menuItem" type="radio">
-                <label for="menuItem13">CarStateData</label>
-              </li>
-              <li>
-                <input id="menuItem14" name="menuItem" type="radio">
-                <label for="menuItem14">CarStateVecotrData</label>
-              </li>
-              <li>
-                <input id="menuItem15" name="menuItem" type="radio">
-                <label for="menuItem15">TyreData</label>
-              </li>
-              <li>
-                <input id="menuItem16" name="menuItem" type="radio">
-                <label for="menuItem16">TyreUdpData</label>
-              </li>
-              <li>
-                <input id="menuItem17" name="menuItem" type="radio">
-                <label for="menuItem17">OtherUdpData</label>
-              </li>
-              <li>
-                <input id="menuItem18" name="menuItem" type="radio">
-                <label for="menuItem18">CarDamageData</label>
-              </li>
-            </ul>
+            <div id="productMenu">
+              <p>Product menu</p>
+              <div class="menuItem">
+                <p>Simple &amp; Time</p>
+              </div>
+              <div class="menuItem">
+                <p>Simple &amp; State</p>
+              </div>
+              <div class="menuItem">
+                <p>Detail state</p>
+              </div>
+            </div>
+            <div id="debugMenu">
+              <p>Debug menu</p>
+              <div class="menuItem">
+                <p>ParticipantInfoStrings</p>
+              </div>
+              <div class="menuItem">
+                <p>ParticipantInfoStringsAdditional</p>
+              </div>
+              <div class="menuItem">
+                <p>GameStateData</p>
+              </div>
+            <div>
           </div>
         </nav>
       </div>
@@ -103,7 +43,6 @@
     <main>
       <div id=contents tabindex="4">
         <p>Hello</p>
-        <button>CarDamageData</button>
         <p>ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
         <img src="../../screenshot/A01.png" alt="" />
       </div>
