Add Slider checkbox

--- a/public/prototype/menu.html
+++ b/public/prototype/menu.html
@@ -45,6 +45,12 @@
         <p>Hello</p>
         <p>ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
         <img src="../../screenshot/A01.png" alt="" />
+
+        <div class="checkboxButton">
+          <input id="checkboxButton" type="checkbox" />
+          <label for="checkboxButton"></label>
+        </div>
+
       </div>
     </main>
     <script src="menu.js"></script>
