Add appearance of options content

--- a/public/prototype/menu.html
+++ b/public/prototype/menu.html
@@ -46,9 +46,9 @@
         <p>ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
         <img src="../../screenshot/A01.png" alt="" />
 
-        <div class="checkboxButton">
-          <input id="checkboxButton" type="checkbox" />
-          <label for="checkboxButton"></label>
+        <div class="slideCheckBox">
+          <input id="slideCheckBox" type="checkbox" />
+          <label for="slideCheckBox"></label>
         </div>
 
       </div>
