--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>PCars2 UDP APP</title>
     <link rel="stylesheet" href="index.css">
   </head>
