--- a/public/debug.html
+++ b/public/debug.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>PCars2 UDP APP</title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <title>PCars2 UDP APP Debug</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="debug.css">
   </head>
   <body>
