--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>PCars2 UDP APP</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" href="favicon-16.ico" sizes="16x16">
+    <link rel="icon" href="favicon-32.ico" sizes="32x32">
+    <link rel="icon" href="favicon-152.ico" sizes="152x152">
+    <link rel="icon" type="image/png" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="apple-touch-icon-120x120-precomposed.png">
+    <link rel="icon" type="image/png" href="apple-touch-icon-152x152-precomposed.png">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
