Add Time prototype

--- a/public/prototype/time.html
+++ b/public/prototype/time.html
@@ -8,6 +8,200 @@
   <body>
     <main>
       <div class="contents">
+        <div class="table">
+          <div class="column">
+            <div class="headerCell">
+              <div>
+                <span>CURRENT</span>
+              </div>
+            </div>
+            <div class="lapCountCell">
+              <div>
+                <span>8</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="lapTimeCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+          </div> <!-- column  -->
+          <div class="column">
+            <div class="headerCell">
+              <div>
+                <span>History1</span>
+              </div>
+            </div>
+            <div class="lapCountCell">
+              <div>
+                <span>88</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="lapTimeCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+          </div> <!-- column  -->
+          <div class="column">
+            <div class="headerCell">
+              <div>
+                <span>History2</span>
+              </div>
+            </div>
+            <div class="lapCountCell">
+              <div>
+                <span>888</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="lapTimeCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+          </div> <!-- column  -->
+          <div class="column">
+            <div class="headerCell">
+              <div>
+                <span>History3</span>
+              </div>
+            </div>
+            <div class="lapCountCell">
+              <div>
+                <span>888</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="lapTimeCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+          </div> <!-- column  -->
+          <div class="column">
+            <div class="headerCell">
+              <div>
+                <span>BEST</span>
+              </div>
+            </div>
+            <div class="lapCountCell">
+              <div>
+                <span>888</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="lapTimeCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+          </div> <!-- column  -->
+          <div class="column">
+            <div class="headerCell">
+              <div>
+                <span>AVERAGE</span>
+              </div>
+            </div>
+            <div class="lapCountCell">
+              <div>
+                <span>---</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+            <div class="lapTimeCell">
+              <div>
+                <span>00:00.000</span>
+              </div>
+            </div>
+          </div> <!-- column  -->
+        </div>
       </div>
     </main>
   </body>
