Add time prototype content header

--- a/public/prototype/time.html
+++ b/public/prototype/time.html
@@ -9,7 +9,39 @@
     <main>
       <div class="contents">
         <div class="table">
-          <div class="column">
+          <div class="headerColumn">
+            <div class="headerCell">
+              <div>
+                <span></span>
+              </div>
+            </div>
+            <div class="lapCountCell">
+              <div>
+                <span>LAP</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>SECTOR 1</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>SECTOR 2</span>
+              </div>
+            </div>
+            <div class="sectorCell">
+              <div>
+                <span>SECTOR 3</span>
+              </div>
+            </div>
+            <div class="lapTimeCell">
+              <div>
+                <span>LAP TIME</span>
+              </div>
+            </div>
+          </div> <!-- column  -->
+          <div class="bodyColumn">
             <div class="headerCell">
               <div>
                 <span>CURRENT</span>
@@ -41,7 +73,7 @@
               </div>
             </div>
           </div> <!-- column  -->
-          <div class="column">
+          <div class="bodyColumn">
             <div class="headerCell">
               <div>
                 <span>History1</span>
@@ -73,7 +105,7 @@
               </div>
             </div>
           </div> <!-- column  -->
-          <div class="column">
+          <div class="bodyColumn">
             <div class="headerCell">
               <div>
                 <span>History2</span>
@@ -105,7 +137,7 @@
               </div>
             </div>
           </div> <!-- column  -->
-          <div class="column">
+          <div class="bodyColumn">
             <div class="headerCell">
               <div>
                 <span>History3</span>
@@ -137,7 +169,7 @@
               </div>
             </div>
           </div> <!-- column  -->
-          <div class="column">
+          <div class="bodyColumn">
             <div class="headerCell">
               <div>
                 <span>BEST</span>
@@ -169,7 +201,7 @@
               </div>
             </div>
           </div> <!-- column  -->
-          <div class="column">
+          <div class="bodyColumn">
             <div class="headerCell">
               <div>
                 <span>AVERAGE</span>
