Clean webpack and npm script

--- a/public/indexDevelop.html
+++ b/public/indexDevelop.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>PCars2 UDP APP Debug</title>
+    <title>PCars2 UDP APP Develop</title>
     <link rel="icon" href="favicon-16.ico" sizes="16x16">
     <link rel="icon" href="favicon-32.ico" sizes="32x32">
     <link rel="icon" href="favicon-152.ico" sizes="152x152">
     <link rel="icon" type="image/png" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" href="apple-touch-icon-120x120-precomposed.png">
     <link rel="icon" type="image/png" href="apple-touch-icon-152x152-precomposed.png">
-    <link rel="stylesheet" href="debug.css">
+    <link rel="stylesheet" href="indexDevelop.css">
   </head>
   <body>
     <div id="root"></div>
-    <script src="dist/debug.bundle.js"></script>
+    <script src="dist/indexDevelop.bundle.js"></script>
   </body>
 </html>
