Add motec content

--- a/public/prototype/motec.html
+++ b/public/prototype/motec.html
@@ -8,6 +8,91 @@
   <body>
     <main>
       <div class="contents">
+        <div class="table">
+          <div class="record">
+            <div class="iconCell">
+              <div>
+                <img src="../src/image/fuel.png">
+              </div>
+            </div>
+            <div class="fuelValueCell valueCell">
+              <div>
+                <span>888.88 L</span>
+              </div>
+            </div>
+            <div class="fuelOherHeaderCell">
+              <div>
+                <span>LATEST</span>
+              </div>
+            </div>
+            <div class="fuelOherValue1Cell valueCell">
+              <div>
+                <span>888.88L</span>
+              </div>
+            </div>
+            <div class="fuelOherHeaderCell">
+              <div>
+                <span>AVE</span>
+              </div>
+            </div>
+            <div class="fuelOherValue2Cell valueCell">
+              <div>
+                <span>888.88L</span>
+              </div>
+            </div>
+          </div>
+          <div class="record">
+            <div class="iconCell">
+              <div>
+                <img src="../src/image/water.png">
+              </div>
+            </div>
+            <div class="value1Cell valueCell">
+              <div>
+                <span>888 ℃</span>
+              </div>
+            </div>
+            <div class="value2Cell valueCell">
+              <div>
+                <span>88.88 kPa</span>
+              </div>
+            </div>
+          </div> <!-- record -->
+          <div class="record">
+            <div class="iconCell">
+              <div>
+                <img src="../src/image/oil.png">
+              </div>
+            </div>
+            <div class="value1Cell valueCell">
+              <div>
+                <span>888℃</span>
+              </div>
+            </div>
+            <div class="value2Cell valueCell">
+              <div>
+                <span>88.88 kPa</span>
+              </div>
+            </div>
+          </div> <!-- record -->
+          <div class="record">
+            <div class="iconCell">
+              <div>
+                <img src="../src/image/engine.png">
+              </div>
+            </div>
+            <div class="value1Cell valueCell">
+              <div>
+                <span>-8888 HP</span>
+              </div>
+            </div>
+            <div class="value2Cell valueCell">
+              <div>
+                <span>-8888 NM</span>
+              </div>
+            </div>
+          </div> <!-- record -->
+        </div> <!-- contents -->
       </div> <!-- contents -->
     </main>
   </body>
