--- a/public/prototype/motec.html
+++ b/public/prototype/motec.html
@@ -9,38 +9,49 @@
     <main>
       <div class="contents">
         <div class="table">
-          <div class="record">
+          <div class="fuelRecord">
             <div class="iconCell">
               <div>
                 <img src="../src/image/fuel.png">
               </div>
             </div>
+
             <div class="fuelValueCell valueCell">
               <div>
                 <span>888.88 L</span>
               </div>
             </div>
-            <div class="fuelOherHeaderCell">
-              <div>
-                <span>LATEST</span>
+
+            <div class="fuelDetailsTable">
+
+              <div class="fuelDetailsRecord1">
+                <div class="fuelDetailsHeaderCell">
+                  <div>
+                    <span>LATEST</span>
+                  </div>
+                </div>
+                <div class="fuelDetailsValueCell valueCell">
+                  <div>
+                    <span>888.88L</span>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="fuelOherValue1Cell valueCell">
-              <div>
-                <span>888.88L</span>
+
+              <div class="fuelDetailsRecord2">
+                <div class="fuelDetailsHeaderCell">
+                  <div>
+                    <span>AVERAGE</span>
+                  </div>
+                </div>
+                <div class="fuelDetailsValueCell valueCell">
+                  <div>
+                    <span>888.88L</span>
+                  </div>
+                </div>
               </div>
+
             </div>
-            <div class="fuelOherHeaderCell">
-              <div>
-                <span>AVE</span>
-              </div>
-            </div>
-            <div class="fuelOherValue2Cell valueCell">
-              <div>
-                <span>888.88L</span>
-              </div>
-            </div>
-          </div>
+          </div> <!-- record -->
           <div class="record">
             <div class="iconCell">
               <div>
