Modify layout tweak

--- a/public/prototype/default.html
+++ b/public/prototype/default.html
@@ -28,7 +28,7 @@
               </div>
             </div> <!-- session -->
 
-            <div class="position">
+            <div class="position border">
               <div class="positionHeader header">
                 <span>POSITION</span>
               </div>
@@ -37,7 +37,7 @@
               </div>
             </div> <!-- position -->
 
-            <div class="current">
+            <div class="current border">
               <div class="currentLap header">
                 <span>CURRENT</span>
               </div>
@@ -122,7 +122,7 @@
               </div>
             </div> <!-- timeLogs -->
 
-            <div class="otherTime">
+            <div class="otherTime border">
               <div class="otherTimeHeader header">
                 <span>FASTEST</span>
               </div>
@@ -137,7 +137,7 @@
               </div>
             </div> <!-- otherTime -->
 
-            <div class="otherTime">
+            <div class="otherTime border">
               <div class="otherTimeHeader header">
                 <span>AVERAGE</span>
               </div>
