--- a/public/prototype/default.html
+++ b/public/prototype/default.html
@@ -57,7 +57,7 @@
                 <div class="timeLogLapCount lap">
                   <span>888</span>
                 </div>
-                <div class="timeLogTIme time">
+                <div class="timeLogTime time">
                   <span>88:88.888</span>
                 </div>
                 <div class="timeLogDelta plusDelta">
@@ -71,7 +71,7 @@
                 <div class="timeLogLapCount lap">
                   <span>888</span>
                 </div>
-                <div class="timeLogTIme time">
+                <div class="timeLogTime time">
                   <span>88:88.888</span>
                 </div>
                 <div class="timeLogDelta minusDelta">
@@ -85,7 +85,7 @@
                 <div class="timeLogLapCount lap">
                   <span>888</span>
                 </div>
-                <div class="timeLogTIme time">
+                <div class="timeLogTime time">
                   <span>88:88.888</span>
                 </div>
                 <div class="timeLogDelta evenDelta">
@@ -99,7 +99,7 @@
                 <div class="timeLogLapCount lap">
                   <span>888</span>
                 </div>
-                <div class="timeLogTIme time">
+                <div class="timeLogTime time">
                   <span>88:88.888</span>
                 </div>
                 <div class="timeLogDelta plusDelta">
@@ -113,7 +113,7 @@
                 <div class="timeLogLapCount lap">
                   <span>888</span>
                 </div>
-                <div class="timeLogTIme time">
+                <div class="timeLogTime time">
                   <span>88:88.888</span>
                 </div>
                 <div class="timeLogDelta minusDelta">
