Add fuel layout

--- a/public/prototype/default.html
+++ b/public/prototype/default.html
@@ -158,8 +158,37 @@
 
         <div class="bottomContents">
           <div class="fuel">
-            <img src="../src/image/fuel.png" />
+
+            <img src="../src/image/fuel-blue.png" />
+
+            <div class="value">
+              <span>888.88L</span>
+            </div>
+
+            <div class="fuelDetails">
+              <div>
+                <div class="fuelDetailsHeader header">
+                  <span>LATEST</span>
+                </div>
+                <div class="fuelDetailsValue value">
+                  <span>888.88L</span>
+                </div>
+              </div>
+              <div>
+                <div class="fuelDetailsHeader header">
+                  <span>AVERAGE</span>
+                </div>
+                <div class="fuelDetailsValue value">
+                  <span>888.88L</span>
+                </div>
+              </div>
+            </div> <!-- fuelDetails -->
+
           </div> <!-- fuel -->
+
+          <div class="tyre">
+          </div> <!-- tyre -->
+
         </div> <!-- bottomContents-->
 
       </div> <!-- contents -->
