Modify fuel layout tweak

--- a/public/prototype/default.html
+++ b/public/prototype/default.html
@@ -161,7 +161,7 @@
 
             <img src="../src/image/fuel-blue.png" />
 
-            <div class="value">
+            <div class="fuelValue value">
               <span>888.88L</span>
             </div>
 
@@ -171,7 +171,7 @@
                   <span>LATEST</span>
                 </div>
                 <div class="fuelDetailsValue value">
-                  <span>888.88L</span>
+                  <span>88.88L</span>
                 </div>
               </div>
               <div>
