Modify engine prototype completed

--- a/public/prototype/engine.html
+++ b/public/prototype/engine.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <title>Engine prototype</title>
-    <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="../src/share/largeContent.css">
     <link rel="stylesheet" href="engine.css">
   </head>
   <body>
@@ -20,6 +18,105 @@
           </div> <!-- leftContents -->
 
           <div class="rightContents">
+
+            <div class="engine">
+
+              <div class="icon">
+                <img src="../src/image/engine.png" />
+              </div>
+
+              <div class="values">
+
+                <div class="valueBox">
+                  <div class="value">
+                    <span>88888</span>
+                  </div>
+                  <div class="unit value">
+                    <span>HP</span>
+                  </div>
+                </div>
+
+                <div class="valueBox">
+                  <div class="value">
+                    <span>88888</span>
+                  </div>
+                  <div class="unit value">
+                    <span>NM</span>
+                  </div>
+                </div>
+
+                <div class="valueBox">
+                  <div class="value">
+                    <span>88888</span>
+                  </div>
+                  <div class="unit value">
+                    <span>rad/s</span>
+                  </div>
+                </div>
+
+              </div>
+
+            </div> <!-- engine -->
+
+            <div class="oil">
+
+              <div class="icon">
+                <img src="../src/image/oil.png" />
+              </div>
+
+              <div class="values">
+
+                <div class="valueBox">
+                  <div class="value">
+                    <span>8888</span>
+                  </div>
+                  <div class="unit value">
+                    <span>℃</span>
+                  </div>
+                </div>
+
+                <div class="valueBox">
+                  <div class="value">
+                    <span>88888</span>
+                  </div>
+                  <div class="unit value">
+                    <span>kPa</span>
+                  </div>
+                </div>
+
+              </div>
+
+            </div> <!-- oil -->
+
+            <div class="water">
+
+              <div class="icon">
+                <img src="../src/image/water.png" />
+              </div>
+
+              <div class="values">
+
+                <div class="valueBox">
+                  <div class="value">
+                    <span>88</span>
+                  </div>
+                  <div class="unit value">
+                    <span>℃</span>
+                  </div>
+                </div>
+
+                <div class="valueBox">
+                  <div class="value">
+                    <span>888</span>
+                  </div>
+                  <div class="unit value">
+                    <span>kPa</span>
+                  </div>
+                </div>
+
+              </div>
+
+            </div> <!-- water -->
 
           </div> <!-- rightContents -->
 
