--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>PCars2 UDP APP</title>
+    <title>PCars2 TB</title>
     <link rel="icon" href="favicon-16.ico" sizes="16x16">
     <link rel="icon" href="favicon-32.ico" sizes="32x32">
     <link rel="icon" href="favicon-152.ico" sizes="152x152">
